--- a/src/main/resources/templates/BoardHome.html
+++ b/src/main/resources/templates/BoardHome.html
@@ -13,11 +13,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="board : ${boards}">
+            <tr th:each="board : ${board}">
                 <td th:text="${board.board_id}"></td>
                 <td th:text="${board.title}"></td>
                 <td th:text="${board.author}"></td>
-                <td th:text="${board.create_date}"></td>
+                <td th:text="${board.create_time}"></td>
             </tr>
             </tbody>
         </table>
