--- a/src/main/resources/templates/BoardHome.html
+++ b/src/main/resources/templates/BoardHome.html
@@ -14,10 +14,10 @@
             </thead>
             <tbody>
             <tr th:each="board : ${board}">
-                <td th:text="${board.board_id}"></td>
+                <td th:text="${board.boardId}"></td>
                 <td th:text="${board.title}"></td>
                 <td th:text="${board.author}"></td>
-                <td th:text="${board.create_time}"></td>
+                <td th:text="${board.createTime}"></td>
             </tr>
             </tbody>
         </table>
