--- a/src/main/resources/templates/BoardHome.html
+++ b/src/main/resources/templates/BoardHome.html
@@ -22,6 +22,11 @@
             </tbody>
         </table>
     </div>
+    <div>
+        <p>
+            <a href="/new">글쓰기</a>
+        </p>
+    </div>
 </div> <!-- /container -->
 </body>
 </html>
