--- a/src/main/resources/templates/boards/CreateContents.html
+++ b/src/main/resources/templates/boards/CreateContents.html
@@ -27,7 +27,7 @@
 				</tr>
 				<tr>
 					<td>
-						<label for="content">내용</label><textarea id="content" name="content" ></textarea>
+						<label for="contents">내용</label><textarea id="contents" name="contents" ></textarea>
 					</td>
 				</tr>
 				<tr>
