--- a/src/main/resources/templates/BoardHome.html
+++ b/src/main/resources/templates/BoardHome.html
@@ -18,6 +18,14 @@
                 <td th:text="${board.title}"></td>
                 <td th:text="${board.author}"></td>
                 <td th:text="${board.createTime}"></td>
+
+                <form id="edit" th:action = "@{'/edit/'+ ${board.boardId}}" method="get">
+                    <td>
+                        <button>수정</button>
+                    </td>
+                </form>
+
+
                 <form id="delete" th:action = "@{'/delete/' + ${board.boardId}}" method="post">
                     <input type="hidden" name = "_method" value = "delete"/>
                     <td>
